LPS-144105 correct warning message align

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/js/util/ShowPartialResultsAlert.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-web/src/main/resources/META-INF/resources/admin/js/util/ShowPartialResultsAlert.scss
@@ -1,5 +1,5 @@
 .lfr-ddm__show-partial-results-alert {
-	padding-top: 16px;
+	padding: 0;
 
 	&--hidden {
 		display: none;
